doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\sjh001111\SynologyDrive\Study\IEN\S3\KIAPP001 (Applications Programming)\Java\2019_11_27_01
-d
C:\Users\sjh001111\SynologyDrive\Study\IEN\S3\KIAPP001 (Applications Programming)\Java\2019_11_27_01\doc
-encoding
windows-1252
-charset
windows-1252
C:\Users\sjh001111\SynologyDrive\Study\IEN\S3\KIAPP001 (Applications Programming)\Java\2019_11_27_01\Theatres.java
<---- end of javadoc command ---->
Loading source file C:\Users\sjh001111\SynologyDrive\Study\IEN\S3\KIAPP001 (Applications Programming)\Java\2019_11_27_01\Theatres.java...
C:\Users\sjh001111\SynologyDrive\Study\IEN\S3\KIAPP001 (Applications Programming)\Java\2019_11_27_01\Theatres.java:5: error: <identifier> expected
    public Theatre find(id){
                          ^
1 error
